@@ -255,6 +255,7 @@ export("+.section",
        tritium,
        unabbreviateYear,
        undriftTime,
+       ungrid,
        unwrapAngle,
        useHeading,
        vectorShow,
